# guardrail

./: .env.example  .gitignore  CONTRIBUTE.md  Cargo.toml  DEPENDENCY_AUDIT.md  LICENSE  README.md  build_orchestrator.bat  build_orchestrator.sh  guardrail-orchestrator.spec  guardrailDev.prompt.md  guardrail_orchestrator.py  package-lock.json
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  rust-clippy.yml
backend/: Cargo.toml  Dockerfile
backend/api-gateway/: Cargo.toml  Dockerfile
backend/api-gateway/src/: main.rs
backend/chain-anchor/: Cargo.toml  Dockerfile  fly.toml
backend/chain-anchor/src/: main.rs
backend/hash-gen/: Cargo.toml
backend/hash-gen/src/: main.rs
backend/identity-service/: Cargo.toml  Dockerfile
backend/identity-service/src/: main.rs
backend/movement-ledger/: Cargo.toml  Dockerfile
backend/movement-ledger/src/: main.rs
backend/policy-engine/: Cargo.toml  Dockerfile
backend/policy-engine/policies/: agent_trading.rego  default_withdrawal.rego
backend/policy-engine/src/: main.rs
backend/shared/: Cargo.toml
backend/shared/src/: crypto.rs  errors.rs  lib.rs  types.rs  zk_credential.rs
contracts/ethereum/: GuardRailAnchor.sol  foundry.toml
contracts/ethereum/test/: GuardRailAnchor.t.sol
contracts/solana/: Anchor.toml
contracts/solana/programs/guardrail/: Cargo.toml
contracts/solana/programs/guardrail/src/: lib.rs
contracts/solana/tests/: guardrail-anchor.ts
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PLAN.md  PROGRESS.md  TODO.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/client-production/: index.pack
frontend/.next/cache/webpack/edge-server-production/: index.pack
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/cache/webpack/server-production/: index.pack
frontend/.next/server/: _error.js  app-paths-manifest.json  middleware-build-manifest.js  middleware-react-loadable-manifest.js  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: _not-found.html  _not-found.rsc  approvals.html  approvals.rsc  identities.html  identities.rsc  index.html  index.rsc  policies.html  policies.rsc  settings.html  settings.rsc
frontend/.next/server/app/(dashboard)/: page.js  page.js.nft.json  page_client-reference-manifest.js
frontend/.next/server/app/(dashboard)/approvals/: page.js  page_client-reference-manifest.js
frontend/.next/server/app/(dashboard)/identities/: page.js  page_client-reference-manifest.js
frontend/.next/server/app/(dashboard)/policies/: page.js  page_client-reference-manifest.js
frontend/.next/server/app/(dashboard)/settings/: page.js  page.js.nft.json  page_client-reference-manifest.js
frontend/.next/server/app/_not-found/: page.js  page_client-reference-manifest.js
frontend/.next/server/app/auth/: login.html  login.rsc
frontend/.next/server/app/auth/login/: page.js  page.js.nft.json  page_client-reference-manifest.js
frontend/.next/server/chunks/: 430.js  480.js  529.js  764.js
frontend/.next/server/pages/: 500.html  _error.js
frontend/.next/server/vendor-chunks/: @radix-ui.js  @swc.js  class-variance-authority.js  clsx.js  lucide-react.js  next.js  tailwind-merge.js  use-sync-external-store.js  zustand.js
frontend/.next/static/chunks/: 245-b11e7cf11e79d4d9.js  270.59c43b6d4dd259ae.js  333-2383a7560036fc82.js  575-5ad5e9b625ecb3ff.js  _error.js  app-pages-internals.js  main-aad186a52b674c22.js  main-app-bd6968a2a0d72531.js  webpack-6bdecad43d7410cc.js  webpack.js
frontend/.next/static/chunks/app/: layout-3ccdbb9fef9808cc.js  layout.js
frontend/.next/static/chunks/app/(dashboard)/: layout-c6d3585f78b6accc.js  layout.js  page-f87a93b970068e84.js  page.js
frontend/.next/static/chunks/app/(dashboard)/approvals/: page-0a93a41d217e6b95.js
frontend/.next/static/chunks/app/_not-found/: page.js
frontend/.next/static/css/: css-app_globals_css-node_modules_next_font_google_target_css.css
frontend/.next/static/webpack/: 83bd3edd00acb1ae.webpack.hot-update.json  webpack.07685acd06f944a4.hot-update.js  webpack.1ce7eda0d2893668.hot-update.js  webpack.67989027d5ff2105.hot-update.js  webpack.83bd3edd00acb1ae.hot-update.js  webpack.bfb4d3b75697ab05.hot-update.js  webpack.c58ac89c081ccbf1.hot-update.js
frontend/.next/types/app/: layout.ts
frontend/.next/types/app/(dashboard)/: layout.ts  page.ts
frontend/.next/types/app/(dashboard)/approvals/: page.ts
frontend/.next/types/app/(dashboard)/identities/: page.ts
frontend/.next/types/app/(dashboard)/policies/: page.ts
frontend/.next/types/app/(dashboard)/settings/: page.ts
frontend/.next/types/app/auth/login/: page.ts
frontend/app/: layout.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/app/(dashboard)/approvals/: page.tsx
frontend/app/(dashboard)/identities/: page.tsx
frontend/app/(dashboard)/policies/: page.tsx
frontend/app/(dashboard)/settings/: page.tsx
frontend/app/auth/login/: page.tsx
frontend/components/shared/: sidebar.tsx
frontend/components/ui/: badge.tsx
frontend/lib/: api.ts  utils.ts
frontend/stores/: auth.ts
frontend/tests/: dashboard.spec.ts  events.spec.ts  identities.spec.ts  policies.spec.ts
frontend/types/: index.ts
infrastructure/: docker-compose.yml
scripts/: init.sql  integration_test.py  logs.sh  start.sh  stop.sh  test.sh
sdk/python/: README.md  pyproject.toml
sdk/python/guardrail_sdk/: __init__.py
sdk/typescript/: README.md  package.json
sdk/typescript/src/: index.ts
tools/orchestrator/: Cargo.toml  build.bat  build.sh
tools/orchestrator/src/: main.rs
(+5 files in other folders)
