[workspace]
resolver = "2"
members = [
    "backend/shared",
    "backend/api-gateway",
    "backend/identity-service",
    "backend/policy-engine",
    "backend/movement-ledger",
    "backend/chain-anchor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/veridicus/guardrail"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"

# Crypto
sha2 = "0.10"
hex = "0.4"

# Blockchain
ethers = { version = "2.0", features = ["rustls"] }
solana-sdk = "1.18"
solana-client = "1.18"
anchor-client = "0.29"

# OPA/Policy
regorus = "0.2"  # Rust OPA implementation

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
config = "0.14"

# Testing
tokio-test = "0.4"
