[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
guardrail-shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
argon2 = "0.5"
