[package]
name = "movement-ledger"
version.workspace = true
edition.workspace = true

[dependencies]
guardrail-shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace"] }
dotenvy = "0.15"
sha2 = "0.10"
hex = "0.4"
