[package]
name = "guardrail-anchor"
version = "0.1.0"
description = "GuardRail on-chain anchor program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "guardrail_anchor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
